--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div id="loadingOverlay" class="loading-overlay">
         <div class="spinner"></div>
-        <p class="loading-text">공고 페이지로 이동 중입니다...</p>
+        <p class="loading-text">뉴스 페이지로 이동 중입니다...</p>
     </div>
 
     <div id="splash" class="splash">
