--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         .loading-bar { height: 14px; background: #f0f2f5; margin-bottom: 15px; border-radius: 4px; position: relative; overflow: hidden; }
         .loading-bar::after { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(255,255,255,0.6), transparent); animation: scan 1.5s infinite; }
         @keyframes scan { 0% { transform: translateX(-100%); } 100% { transform: translateX(100%); } }
+
+        /* 뉴스 아이템 스타일 보정 */
+        .news-date { font-size: 11px; color: #94a3b8; margin-top: 6px; display: block; }
     </style>
 </head>
 <body>
@@ -121,7 +124,6 @@
     <script>
         const loadingOverlay = document.getElementById('loadingOverlay');
 
-        // [뉴스 전용] 링크 클릭 시 로딩바 표시 함수
         function handleNewsLinkClick(e) {
             const href = this.getAttribute('href');
             if (href && href !== '#' && !href.startsWith('javascript')) {
@@ -149,16 +151,20 @@
                 if (data.status === 'ok') {
                     let html = '<ul style="list-style:none; padding:0; margin:0;">';
                     data.items.slice(0, 10).forEach(item => {
+                        // 📅 날짜 처리 로직 추가
+                        const pubDate = new Date(item.pubDate);
+                        const dateStr = pubDate.getFullYear() + '-' + String(pubDate.getMonth() + 1).padStart(2, '0') + '-' + String(pubDate.getDate()).padStart(2, '0');
+
                         html += `
                             <li style="padding:15px 0; border-bottom:1px solid #f8f9fa;">
                                 <a href="${item.link}" class="news-link" style="text-decoration:none; color:#333; font-size:14px; display:block;">
                                     <strong>[뉴스]</strong> ${item.title}
+                                    <span class="news-date">${dateStr} | 고용 정책 소식</span>
                                 </a>
                             </li>`;
                     });
                     container.innerHTML = html + '</ul>';
 
-                    // 생성된 뉴스 링크들에만 이벤트 바인딩
                     document.querySelectorAll('.news-link').forEach(link => {
                         link.addEventListener('click', handleNewsLinkClick);
                     });
@@ -170,16 +176,12 @@
 
         (function() {
             fetchLiveNews();
-
-            // 📝 상단 메뉴 버튼들에 적용되었던 이벤트 바인딩 코드를 삭제했습니다.
-
             if (sessionStorage.getItem('emp_splash_viewed') === 'true') {
                 const splash = document.getElementById('splash');
                 if(splash) splash.remove();
             }
         })();
 
-        // 브라우저 뒤로가기 시 로딩창 숨기기
         window.onpageshow = function(event) {
             if (event.persisted) {
                 loadingOverlay.classList.remove('active');
